crates/oxc_react_compiler/tests/snapshots/new-mutability__mutate-through-propertyload.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/mutate-through-propertyload.js
---
import { c as _c } from "react/compiler-runtime";
// @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(1);
	let t1;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const x = {};
		const y = { x };
		const z = y.x;
		z.true = false;
		t1 = <div>{z}</div>;
		$[0] = t1;
	} else {
		t1 = $[0];
	}
	return t1;
}
