crates/oxc_react_compiler/tests/snapshots/new-mutability__potential-mutation-in-function-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/potential-mutation-in-function-expression.js
---
import { c as _c } from "react/compiler-runtime";
// @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(9);
	const { a, b, c } = t0;
	let t1;
	if ($[0] !== a || $[1] !== b) {
		t1 = [a, b];
		$[0] = a;
		$[1] = b;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	const x = t1;
	let t2;
	if ($[3] !== c || $[4] !== x) {
		t2 = () => {
			maybeMutate(x);
			console.log(c);
		};
		$[3] = c;
		$[4] = x;
		$[5] = t2;
	} else {
		t2 = $[5];
	}
	const f = t2;
	let t3;
	if ($[6] !== f || $[7] !== x) {
		t3 = <Foo onClick={f} value={x} />;
		$[6] = f;
		$[7] = x;
		$[8] = t3;
	} else {
		t3 = $[8];
	}
	return t3;
}
